Change edit user link

--- a/spirit/views/user-edit.html
+++ b/spirit/views/user-edit.html
@@ -5,7 +5,7 @@
 </div>
 
 <main>
-    <form method="post" action="{{baseUrl}}spirit/users/{{id}}">
+    <form method="post" action="{{baseUrl}}spirit/users/edit/{{id}}">
         <ul class="form">
             <li>
                 <label><span>Email:</span>
