--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -1,5 +1,8 @@
 <div id="toolbox">
     <ul>
-        <li><a href="{{baseUrl}}spirit/settings/about">About</a></li>
+        <li class="about"><a href="{{baseUrl}}spirit/about">About</a></li>
     </ul>
 </div>
+
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/settings.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
