--- a/spirit/views/about.html
+++ b/spirit/views/about.html
@@ -7,7 +7,22 @@
 <main>
     <h2>About</h2>
     <h3><img src="{{baseUrl}}spirit/views/resources/logo.png" alt="" /> Spirit <strong>v{{version}}</strong></h3>
+
     <p>Just a beautiful, minimal photoblog solution in PHP</p>
+
+    <h3>Third Party Libraries</h3>
+    
+    <ul>
+        <li>
+            <a href="https://github.com/j4mie/idiorm">Idiorm</a> &amp; <a href="https://github.com/j4mie/paris">Paris</a>
+        </li>
+        <li><a href="https://github.com/badphp/dispatch">dispatch</a></li>
+        <li><a href="https://github.com/jamiebicknell/Thumb">Thumb</a></li>
+        <li><a href="https://github.com/fightbulc/simplon_mustache">simplon_mustache</a></li>
+        <li><a href="https://github.com/ajaxorg/ace">Ace</a></li>
+        <li><a href="https://github.com/erusev/parsedown">Parsedown</a></li>
+        <li><a href="https://github.com/driftyco/ionicons">Ionicons</a></li>
+    </ul>
 </main>
 
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/backbutton.js"></script>
