Update 3rd party lib links

--- a/spirit/views/about.html
+++ b/spirit/views/about.html
@@ -8,10 +8,15 @@
     <h2>About</h2>
     <h3><img src="{{baseUrl}}spirit/views/resources/logo.png" alt="" /> Spirit <strong>v{{version}}</strong></h3>
 
-    <p>Just a beautiful, minimal photoblog solution in PHP</p>
+    <p>Just a beautiful, minimal photoblog solution in PHP.</p>
+
+    <ul>
+        <li>Created by <a href="http://yichuanshen.de">Yichuan Shen</a></li>
+        <li>Contribute on <a href="https://github.com/yishn/Spirit/">GitHub</a></li>
+    </ul>
 
     <h3>Third Party Libraries</h3>
-    
+
     <ul>
         <li>
             <a href="https://github.com/j4mie/idiorm">Idiorm</a> &amp; <a href="https://github.com/j4mie/paris">Paris</a>
@@ -19,9 +24,10 @@
         <li><a href="https://github.com/badphp/dispatch">dispatch</a></li>
         <li><a href="https://github.com/jamiebicknell/Thumb">Thumb</a></li>
         <li><a href="https://github.com/fightbulc/simplon_mustache">simplon_mustache</a></li>
-        <li><a href="https://github.com/ajaxorg/ace">Ace</a></li>
-        <li><a href="https://github.com/erusev/parsedown">Parsedown</a></li>
-        <li><a href="https://github.com/driftyco/ionicons">Ionicons</a></li>
+        <li><a href="http://parsedown.org/">Parsedown</a></li>
+        <li><a href="http://ace.c9.io/">Ace</a></li>
+        <li><a href="http://mootools.net/">MooTools</a></li>
+        <li><a href="http://ionicons.com/">Ionicons</a></li>
     </ul>
 </main>
 
