--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -17,7 +17,7 @@
         <li class="filter"><a href="{{baseUrl}}spirit/partial/monthpicker/photos" class="monthpicker">Month</a></li>
         <li class="upload"><a href="{{baseUrl}}spirit/photos/upload">Upload</a></li>
         <li class="edit"><a href="{{baseUrl}}spirit/photos/edit">Edit</a></li>
-        <li class="delete"><a href="#">Delete</a></li>
+        <li class="delete"><a href="{{baseUrl}}spirit/photos/delete">Delete</a></li>
         <li class="search"><input type="search" placeholder="Search" /></li>
     </ul>
 </div>
