Add settings panel

--- a/spirit/views/css/form.css
+++ b/spirit/views/css/form.css
@@ -30,7 +30,7 @@ input { padding: .2em .3em; }
         letter-spacing: 2px;
         text-transform: uppercase;
     }
-    .form label input[type="text"], .form label input[type="password"],
+    .form label input[type="text"], .form label input[type="password"], .form label input[type="number"],
     .form label textarea , .form label .ace {
         display: block;
         padding: 0;
