Add timezone setting

--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -57,6 +57,11 @@
 
         <ul class="form">
             <li>
+                <label><span>Timezone:</span>
+                    <input type="text" value="{{timezone}}" name="timezone" placeholder="UTC" />
+                </label>
+            </li>
+            <li>
                 <label><span>Date format:</span>
                     <input type="text" value="{{dateFormat}}" name="dateFormat" placeholder="jS F, Y H:i" />
                 </label>
