--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -8,8 +8,6 @@
     <h2>Settings</h2>
 
     <form method="post" action="{{baseUrl}}spirit/settings">
-        <h3>General</h3>
-
         <ul class="form">
             <li class="title">
                 <label><span>Title:</span>
@@ -17,13 +15,11 @@
                 </label>
             </li>
             <li>
-                <label><span>Subtitle:</span>
+                <label><span>Tagline:</span>
                     <input type="text" value="{{subtitle}}" name="subtitle"{{^root}} disabled{{/root}} />
                 </label>
             </li>
         </ul>
-
-        <h3>Photos &amp; Albums</h3>
 
         <ul class="form">
             <li>
@@ -52,8 +48,6 @@
                 </label>
             </li>
         </ul>
-
-        <h3>Date &amp; Time</h3>
 
         <ul class="form">
             <li>
