'Newest first' and 'Oldest first'

--- a/spirit/views/album-edit.html
+++ b/spirit/views/album-edit.html
@@ -15,8 +15,8 @@
             <li>
                 <label><span>Order:</span>
                     <select name="chronological">
-                        <option value="1"{{#chronological}} selected{{/chronological}}>Chronological</option>
-                        <option value="0"{{^chronological}} selected{{/chronological}}>Reverse-chronological</option>
+                        <option value="1"{{#chronological}} selected{{/chronological}}>Oldest first</option>
+                        <option value="0"{{^chronological}} selected{{/chronological}}>Newest first</option>
                     </select>
                 </label>
             </li>
