--- a/spirit/views/about.html
+++ b/spirit/views/about.html
@@ -15,12 +15,10 @@
         <li>Contribute on <a href="https://github.com/yishn/Spirit/">GitHub</a></li>
     </ul>
 
-    <h3>Third Party Libraries</h3>
+    <h4>Third Party Libraries</h4>
 
-    <ul>
-        <li>
-            <a href="https://github.com/j4mie/idiorm">Idiorm</a> &amp; <a href="https://github.com/j4mie/paris">Paris</a>
-        </li>
+    <ul class="inline">
+        <li><a href="https://github.com/j4mie/idiorm">Idiorm</a> &amp; <a href="https://github.com/j4mie/paris">Paris</a></li>
         <li><a href="https://github.com/badphp/dispatch">dispatch</a></li>
         <li><a href="https://github.com/jamiebicknell/Thumb">Thumb</a></li>
         <li><a href="https://github.com/fightbulc/simplon_mustache">simplon_mustache</a></li>
