--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -1,5 +1,6 @@
 <div id="toolbox">
     <ul>
+        <li class="site"><a href="{{baseUrl}}">Visit Site</a></li>
         <li class="about"><a href="{{baseUrl}}spirit/about">About</a></li>
     </ul>
 </div>
