--- a/spirit/views/css/typography.css
+++ b/spirit/views/css/typography.css
@@ -23,6 +23,7 @@ h3 strong {
     font-size: .8em;
     text-transform: uppercase;
 }
+h4 { font-size: 1em; }
 
 h2, h3, h4, h5, h6, p, ol, ul, blockquote, form, hr {
     margin: 1em 0;
