--- a/spirit/views/css/form.css
+++ b/spirit/views/css/form.css
@@ -61,12 +61,14 @@ button:hover, .button:hover { opacity: 1; }
 
 optgroup {
         color: #aaa;
+        font-size: .8em;
         letter-spacing: 2px;
         text-indent: 5px;
         text-transform: uppercase;
     }
     optgroup option {
         color: black;
+        font-size: 1.25em;
         padding-left: 1em;
         letter-spacing: 0;
         text-transform: none;
