--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -8,6 +8,10 @@
 <main>
     <h2>Settings</h2>
 
+    {{^root}}
+    <p>You don&rsquo;t have permission to edit settings.</p>
+    {{/root}}
+
     <form method="post" action="{{baseUrl}}spirit/settings">
         <ul class="form">
             <li class="title">
