Required login inputs

--- a/spirit/views/login.html
+++ b/spirit/views/login.html
@@ -3,16 +3,15 @@
         <p>
             <label>
                 <span>Email address:</span>
-                <input type="text" name="username" placeholder="Email Address" />
+                <input type="text" name="username" required placeholder="Email Address" />
             </label>
         </p>
         <p>
             <label>
                 <span>Password:</span>
-                <input type="password" name="password" placeholder="Password" />
+                <input type="password" name="password" required placeholder="Password" />
             </label>
         </p>
-
         <p>
             <button type="submit">Login</button>
         </p>
