--- a/spirit/views/login.html
+++ b/spirit/views/login.html
@@ -3,7 +3,7 @@
         <p>
             <label>
                 <span>Email address:</span>
-                <input type="text" name="username" required placeholder="Email Address" />
+                <input type="text" name="email" required placeholder="Email Address" />
             </label>
         </p>
         <p>
