Add error message to login form

--- a/spirit/views/login.html
+++ b/spirit/views/login.html
@@ -1,5 +1,8 @@
 <main>
     <form method="post" action="{{baseUrl}}spirit/login">
+        {{#flagInvalid}}
+        <p class="error">The password is incorrect.</p>
+        {{/flagInvalid}}
         <p>
             <label>
                 <span>Email address:</span>
