--- a/spirit/views/css/typography.css
+++ b/spirit/views/css/typography.css
@@ -11,12 +11,16 @@ hr {
 
 textarea { font-family: Consolas, Monaco, 'Courier New', monospace; }
 
+h2, h3, h4, h5, h6, p, ol, ul, blockquote, form, hr {
+    margin: 1em 0;
+}
+
 h1, h2 { font-weight: lighter; }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
 h3 {
     font-size: 1.5em;
-    font-weight: normal;
+    font-weight: 300;
     letter-spacing: -1px;
 }
 h3 strong {
@@ -24,10 +28,6 @@ h3 strong {
     text-transform: uppercase;
 }
 h4 { font-size: 1em; }
-
-h2, h3, h4, h5, h6, p, ol, ul, blockquote, form, hr {
-    margin: 1em 0;
-}
 
 ol, ul, blockquote {
     margin-left: 1.5em;
