--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -13,6 +13,8 @@
     {{/root}}
 
     <form method="post" action="{{baseUrl}}spirit/settings">
+        <h3>General</h3>
+
         <ul class="form">
             <li class="title">
                 <label><span>Title:</span>
@@ -25,6 +27,8 @@
                 </label>
             </li>
         </ul>
+
+        <h3>Photo &amp; Album</h3>
 
         <ul class="form">
             <li>
@@ -53,6 +57,8 @@
                 </label>
             </li>
         </ul>
+
+        <h3>Time &amp; Date</h3>
 
         <ul class="form">
             <li>
@@ -89,3 +95,4 @@
 
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/settings.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/confirmclose.js"></script>
