--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -1,5 +1,6 @@
 <div id="toolbox">
     <ul>
+        <li class="checkbox"><label><input type="checkbox" name="checkall" /></label></li>
         {{#hasFilters}}
         <li class="clearFilter">
             {{#filterAlbum}}
