--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -9,7 +9,7 @@
     <h2>Settings</h2>
 
     {{^root}}
-    <p>You don&rsquo;t have permission to edit settings.</p>
+    <p class="error">You don&rsquo;t have permission to edit settings.</p>
     {{/root}}
 
     <form method="post" action="{{baseUrl}}spirit/settings">
