--- a/spirit/views/users.html
+++ b/spirit/views/users.html
@@ -7,7 +7,7 @@
 <main>
     <h2>Users</h2>
 
-    <ul class="userstream">
+    <ul class="stream userstream">
         {{#users}}
         <li>
             <a href="{{baseUrl}}spirit/users/edit/{{id}}">
