Input type email

--- a/spirit/views/login.html
+++ b/spirit/views/login.html
@@ -9,7 +9,7 @@
         <p>
             <label>
                 <span>Email address:</span>
-                <input type="text" name="email" required autofocus placeholder="Email Address" />
+                <input type="email" name="email" required autofocus placeholder="Email Address" />
             </label>
         </p>
         <p>
