Add Source Sans Pro to about

--- a/spirit/views/about.html
+++ b/spirit/views/about.html
@@ -26,6 +26,7 @@
         <li><a href="http://ace.c9.io/">Ace</a></li>
         <li><a href="http://mootools.net/">MooTools</a></li>
         <li><a href="http://ionicons.com/">Ionicons</a></li>
+        <li><a href="http://adobe-fonts.github.io/source-sans-pro/">Source Sans Pro</a></li>
     </ul>
 </main>
 
