--- a/spirit/views/settings.html
+++ b/spirit/views/settings.html
@@ -37,7 +37,7 @@
             </li>
         </ul>
 
-        <h3>Photo &amp; Album</h3>
+        <h3>Photos &amp; Albums</h3>
 
         <ul class="form">
             <li>
